# dina

./: .editorconfig  .env.example  .gitignore  .prettierrc.json  ADVANCED-SETUP.md  APPVIEW_ARCHTECTURE.md  ARCHITECTURE.md  AUDIT_CHECKLIST.md  CAPABILITIES.md  CHANGELOG.md  CLAUDE.md  CODE_ARCHITECTURE.md  IMPLEMENTATION_PLAN.md  LICENSE  MANUAL_TEST_GUIDE.md  Makefile  NETWORKING.md  QUICKSTART.md  README-OLD.md  README.md  RELEASE_TEST_PLAN.md  ROADMAP.md  SECURITY.md  TEST_ISSUES_3.md  TODO.md  UserCapabilities.md  all_test_results.html  appview_issues.txt  architecture_status.md  brain_issues.txt  core_issues.txt  dina-admin  dina-openclaw-skill.md  dina.html  docker-compose-e2e.yml  docker-compose-release.yml  docker-compose-system.yml  docker-compose-test-stack.yml  docker-compose.dev.yml  docker-compose.direct.yml  (+28 more)
admin-cli/: .gitignore  pyproject.toml
admin-cli/src/dina_admin_cli/: __init__.py  __main__.py  client.py  config.py  main.py  output.py
admin-cli/tests/: conftest.py  test_client.py  test_commands.py
api/: brain-api.json  brain-api.yaml  core-api.yaml  msgbox-api.yaml  oapi-brain-codegen.yaml  oapi-codegen.yaml
apps/: README.md
appview/: .env.example  Dockerfile  INTEGRATION_TEST_PLAN.md  UNIT_TEST_PLAN.md  docker-compose.dev.yml  docker-compose.yml  drizzle.config.ts  install_appview.sh  package.json  test.sh  test_appview.ts  tsconfig.json  vitest.config.ts
brain/: Dockerfile  pyproject.toml  requirements.txt
brain/config/: pii_allowlist.yaml
brain/src/: .gitignore  main.py  prompts.py
brain/src/adapter/: appview_client.py  bluesky_bot.py  bluesky_channel.py  core_http.py  llm_claude.py  llm_gemini.py  llm_llama.py  llm_openai.py  llm_openrouter.py  mcp_http.py  mcp_stdio.py  pds_publisher.py  recognizers_eu.py  recognizers_india.py  scrubber_presidio.py  scrubber_spacy.py  signing.py  telegram_bot.py  telegram_channel.py
brain/src/dina_admin/: app.py  core_client.py
brain/src/dina_admin/routes/: chat.py  contacts.py  dashboard.py  devices.py  history.py  login.py  pages.py  settings.py  trust.py
brain/src/dina_admin/templates/: base.html  contacts.html  dashboard.html  devices.html  history.html  login.html  settings.html  trust.html
brain/src/dina_brain/: __init__.py  app.py  config.py  main.py
brain/src/dina_brain/admin/static/: style.css
brain/src/dina_brain/admin/templates/: contacts.html  dashboard.html  personas.html
brain/src/dina_brain/api/: types.py
brain/src/dina_brain/core_client/: __init__.py  client.py
brain/src/dina_brain/guardian/: loop.py  whisper.py
brain/src/dina_brain/llm/: router.py
brain/src/dina_brain/mcp/: __init__.py
brain/src/dina_brain/pii/: __init__.py  scrubber.py
brain/src/dina_brain/routes/: pii.py  process.py  proposals.py  reason.py  trace.py
brain/src/dina_brain/routing/: __init__.py  router.py
brain/src/dina_brain/sync/: __init__.py  dedup.py
brain/src/domain/: __init__.py  enums.py  errors.py  request.py  response.py  types.py
brain/src/infra/: config.py  crash_handler.py  logging.py  model_config.py  rate_limit.py  trace.py  trace_emit.py
brain/src/port/: channel.py  core_client.py  llm.py  mcp.py  pii.py  scrubber.py  telegram.py
brain/src/service/: command_dispatcher.py  contact_matcher.py  domain_classifier.py  enrichment.py  entity_vault.py  event_extractor.py  guardian.py  intent_classifier.py  llm_router.py  nudge.py  person_link_extractor.py  person_resolver.py  persona_registry.py  persona_selector.py  preference_extractor.py  reminder_planner.py  scratchpad.py  sensitive_signals.py  service_handler.py  service_publisher.py  service_query.py  staging_processor.py  subject_attributor.py  sync_engine.py  telegram.py  tier_classifier.py  topic_extractor.py  trust_scorer.py  user_commands.py  vault_context.py
brain/src/service/capabilities/: eta_query.py  registry.py
brain/tests/: TEST_PLAN.md  __init__.py  conftest.py  contracts.py  factories.py  test_admin.py  test_admin_html.py  test_alias_support.py  test_api.py  test_auth.py  test_channel_parity.py  test_config.py  test_contact_matcher.py  test_core_client.py  test_crash.py  test_deferred.py  test_embedding.py  test_enrichment.py  test_event_extractor.py  test_fix_verification.py  test_guardian.py  test_guardian_service_routing.py  test_intent_classifier.py  test_llm.py  test_manifest.json  test_mcp.py  test_person_linking.py  test_persona_registry.py  test_pii.py  test_pipeline_safety.py  test_preference_extractor.py  test_query_service_autofill.py  test_refactoring_guards.py  test_resilience.py  test_routing.py  test_scratchpad.py  test_service_handler.py  test_service_query_formatters.py  test_service_query_orchestrator.py  test_silence.py  (+12 more)
cli/: Dockerfile  pyproject.toml
cli/src/dina_cli/: __init__.py  __main__.py  agent_daemon.py  agent_runner.py  client.py  config.py  hermes_runner.py  main.py  mcp_server.py  openclaw.py  openclaw_hook.py  openclaw_runner.py  output.py  runner_registry.py  seed_wrap.py  session.py  setup_agent.py  signing.py  transport.py
cli/tests/: TEST_PLAN.md  conftest.py  test_client.py  test_commands.py  test_openclaw.py  test_openclaw_hook.py  test_runner.py  test_session.py  test_signing.py  test_task.py  test_tracing.py  test_transport.py
core/: Dockerfile  entrypoint.sh  go.mod  go.sum
dina/: __main__.py  agent.py  chat.py  did_key.py  identity.py  memory.py  models.py  signing.py  tools.py  vault.py
dina-dht/: Cargo.toml  pyproject.toml
dina-dht/src/: did_dht.rs  dns_encoding.rs  lib.rs
docs/: APPVIEW_ARCHTECTURE.md  ARCHITECTURE_CLEANUP_CODE_ARCHITECTURE.md  ARCHITECTURE_CLEANUP_REVIEW.md  ARCHITECTURE_CLEANUP_TASKS.md  ARCHITECTURE_REVIEW.md  ARCHITECTURE_REWRITE_DECISIONS.md  CODE_ARCHITECTURE.md  FLOW_DIAGRAMS.md  HOME_NODE_LITE_TASKS.md  IMPLEMENTATION_PLAN.md  MANUAL_TEST_GUIDE.md  OPENAPI_TRANSFORMATION_PLAN.md  OPENCLAW_INTEGRATION_PLAN.md  PHASE2_PORT_AUDIT.md  PII_ARCHITECTURE_V2.md  RELEASE_TEST_PLAN.md  ROADMAP.md  SIMPLIFIED_ARCHITECTURE.md  TEST_SPEC.md  TODO.md  TRUST_NETWORK_V1_BACKLOG.md  TRUST_NETWORK_V1_PLAN.md  TRUST_NETWORK_V1_TASKS.md  (+19 more)
(+1838 files in other folders)
