[project]
name = "dina"
version = "0.4.0"
description = "The Architecture of Agency. A protocol for Sovereign Personal Agents."
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
dependencies = [
    "pydantic-ai>=0.1",
    "youtube-transcript-api>=1.0",
    "chromadb>=1.0",
    "ollama>=0.4",
    "google-genai>=1.0",
    "python-dotenv>=1.0",
    "base58>=2.1",
    "cryptography>=41.0",
]

[project.optional-dependencies]
ceramic = ["ceramicsdk>=0.1"]

[tool.pytest.ini_options]
markers = [
    "slow: marks tests as slow (100k scale, real LLM calls) — deselect with -m 'not slow'",
    "e2e: end-to-end Docker bootstrap tests — requires Docker daemon",
    "manual: manual release check — requires human judgment or external infrastructure",
    "mock_heavy: E2E suites that exercise mock logic (>90%), not real Go Core APIs — deselect with -m 'not mock_heavy'",
    "legacy: legacy v0.1-v0.3 tests — run explicitly with -m legacy, excluded from default pipeline",
    "compat: backward compatibility tests — verifies migration paths and legacy format support",
]
