[project]
name = "dina-admin-cli"
version = "0.1.0"
description = "Admin CLI for Dina Home Node — headless node management"
requires-python = ">=3.10"
license = {text = "MIT"}
dependencies = [
    "click==8.3.1",
    "httpx==0.28.1",
]

[project.scripts]
dina-admin = "dina_admin_cli.main:cli"

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
