[project]
name = "dina-brain"
version = "0.4.0"
description = "Dina Brain — LLM reasoning sidecar for dina-core"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    "httpx>=0.27.0",
    "structlog>=24.0.0",
    "pydantic>=2.0.0",
    "jinja2>=3.1.0",
    "base58>=2.1.1",
]

[project.optional-dependencies]
llm = ["google-genai>=1.0.0", "anthropic>=0.40.0", "openai>=1.0.0"]
pii = ["spacy>=3.7.0", "presidio-analyzer[gliner]>=2.2.0", "presidio-anonymizer>=2.2.0", "faker>=22.0.0", "gliner>=0.2.10"]
telegram = ["python-telegram-bot>=22.0"]
dev = ["pytest>=8.0", "pytest-asyncio>=0.24.0", "pytest-cov"]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]
