[project]
name = "dina-brain"
version = "0.4.0"
description = "Dina Brain — LLM reasoning sidecar for dina-core"
requires-python = ">=3.10"
dependencies = [
    "fastapi==0.135.2",
    "uvicorn[standard]==0.42.0",
    "httpx==0.28.1",
    "structlog==25.5.0",
    "pydantic==2.12.5",
    "jinja2==3.1.6",
    "base58==2.1.1",
]

[project.optional-dependencies]
llm = ["google-genai==1.68.0", "anthropic==0.86.0", "openai==2.30.0"]
pii = ["spacy==3.8.13", "presidio-analyzer==2.2.362", "presidio-anonymizer==2.2.362", "faker==40.11.1"]
pii-gliner = ["spacy==3.8.13", "presidio-analyzer[gliner]==2.2.362", "presidio-anonymizer==2.2.362", "faker==40.11.1", "gliner==0.2.26"]
telegram = ["python-telegram-bot==22.7"]
dev = ["pytest>=8.0", "pytest-asyncio>=0.24.0", "pytest-cov"]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]
