[project]
name = "dina-agent"
version = "0.6.0"
description = "CLI client for Dina Home Node — encrypted memory, PII scrubbing, action gating"
requires-python = ">=3.10"
license = "MIT"
dependencies = [
    "click>=8.1",
    "httpx>=0.27",
    "websockets>=12.0",
    "cryptography>=42.0",
    "base58>=2.1",
    "argon2-cffi>=23.1",
    "mnemonic>=0.20",
]

[project.scripts]
dina = "dina_cli.main:cli"

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
