[package]
name = "dina-dht"
version = "0.3.0"
edition = "2021"
description = "did:dht support for Dina — wraps pkarr via PyO3"

[lib]
name = "dina_dht"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.23", features = ["extension-module"] }
pkarr = { version = "5", features = ["dht"] }
simple-dns = "0.9"
ed25519-dalek = "2"
zbase32 = "0.1"
tokio = { version = "1", features = ["rt-multi-thread"] }
serde_json = "1"
